[gd_scene load_steps=8 format=3 uid="uid://dfdikcm0l3jt8"]

[ext_resource type="Script" path="res://Options.gd" id="1_adpy6"]
[ext_resource type="Theme" uid="uid://dva1lk32kcccy" path="res://UI/jurl-theme.tres" id="1_f7cvh"]
[ext_resource type="PackedScene" uid="uid://1wwkreunyf3n" path="res://push_switch.tscn" id="3_jed3m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ugxu7"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3jhi3"]
bg_color = Color(0.521569, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xwqeg"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_top = 3.0
expand_margin_right = 9.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5e3kt"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 6.0
expand_margin_top = 6.0
expand_margin_right = 6.0
expand_margin_bottom = 6.0

[node name="Node2D" type="Node2D"]
process_mode = 3
script = ExtResource("1_adpy6")

[node name="ReferenceRect" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="ReferenceRect"]
layout_mode = 0
offset_right = 1928.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.815686)

[node name="Label" type="Label" parent="ReferenceRect"]
layout_mode = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 598.0
offset_bottom = 181.0
theme = ExtResource("1_f7cvh")
theme_override_colors/font_color = Color(0, 0.396078, 0, 1)
theme_override_colors/font_shadow_color = Color(0.392157, 0.407843, 0.415686, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "DIFFICULTY"

[node name="Label2" type="Label" parent="ReferenceRect"]
layout_mode = 0
offset_left = 128.0
offset_top = 284.0
offset_right = 598.0
offset_bottom = 337.0
theme = ExtResource("1_f7cvh")
theme_override_colors/font_color = Color(0, 0.396078, 0, 1)
theme_override_colors/font_shadow_color = Color(0.392157, 0.407843, 0.415686, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "MUSIC"

[node name="Label3" type="Label" parent="ReferenceRect"]
layout_mode = 0
offset_left = 128.0
offset_top = 456.0
offset_right = 598.0
offset_bottom = 509.0
theme = ExtResource("1_f7cvh")
theme_override_colors/font_color = Color(0, 0.396078, 0, 1)
theme_override_colors/font_shadow_color = Color(0.392157, 0.407843, 0.415686, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "FX"

[node name="Label4" type="Label" parent="ReferenceRect"]
layout_mode = 0
offset_left = 624.0
offset_top = 96.0
offset_right = 1094.0
offset_bottom = 149.0
theme = ExtResource("1_f7cvh")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 25
text = "EASY"

[node name="Label5" type="Label" parent="ReferenceRect"]
layout_mode = 0
offset_left = 1168.0
offset_top = 96.0
offset_right = 1638.0
offset_bottom = 149.0
theme = ExtResource("1_f7cvh")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 25
text = "MEDIUM"

[node name="Label6" type="Label" parent="ReferenceRect"]
layout_mode = 0
offset_left = 1760.0
offset_top = 96.0
offset_right = 2230.0
offset_bottom = 149.0
theme = ExtResource("1_f7cvh")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 25
text = "HARD"

[node name="OKButton" type="Button" parent="ReferenceRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.378
anchor_top = 0.924
anchor_right = 0.57
anchor_bottom = 0.936
offset_left = 448.24
offset_top = -61.92
offset_right = 688.24
offset_bottom = 16.08
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(2.08165e-12, 2.08165e-12)
focus_neighbor_left = NodePath("../QuitButton")
focus_neighbor_top = NodePath("../speedRunMode")
focus_previous = NodePath("../QuitButton")
theme_override_colors/font_color = Color(0, 0.458824, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_ugxu7")
text = "OK"

[node name="QuitButton" type="Button" parent="ReferenceRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.378
anchor_top = 0.924
anchor_right = 0.57
anchor_bottom = 0.936
offset_left = -573.76
offset_top = -61.92
offset_right = -333.76
offset_bottom = 16.08
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(2.08165e-12, 2.08165e-12)
focus_neighbor_top = NodePath("../CheckButton")
focus_neighbor_right = NodePath("../OKButton")
focus_next = NodePath("../OKButton")
theme_override_colors/font_color = Color(0, 0.458824, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_ugxu7")
text = "QUIT"

[node name="DifficultySlider" type="HSlider" parent="ReferenceRect"]
layout_mode = 1
offset_left = 632.0
offset_top = 128.0
offset_right = 932.0
offset_bottom = 144.0
scale = Vector2(4, 4)
focus_neighbor_bottom = NodePath("../MusicSlider")
focus_next = NodePath("../MusicSlider")
theme_override_constants/grabber_offset = 0
theme_override_styles/slider = SubResource("StyleBoxFlat_3jhi3")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_xwqeg")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_5e3kt")
min_value = 1.0
max_value = 3.0
value = 1.0
tick_count = 3
ticks_on_borders = true

[node name="MusicSlider" type="HSlider" parent="ReferenceRect"]
layout_mode = 1
offset_left = 632.0
offset_top = 284.0
offset_right = 932.0
offset_bottom = 300.0
scale = Vector2(4, 4)
focus_neighbor_top = NodePath("../DifficultySlider")
focus_neighbor_bottom = NodePath("../FXSlider")
focus_next = NodePath("../FXSlider")
focus_previous = NodePath("../DifficultySlider")
theme_override_constants/grabber_offset = 0
theme_override_styles/slider = SubResource("StyleBoxFlat_3jhi3")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_xwqeg")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_5e3kt")
max_value = 10.0
value = 5.0
tick_count = 10
ticks_on_borders = true

[node name="FXSlider" type="HSlider" parent="ReferenceRect"]
layout_mode = 1
offset_left = 632.0
offset_top = 456.0
offset_right = 932.0
offset_bottom = 472.0
scale = Vector2(4, 4)
focus_neighbor_top = NodePath("../MusicSlider")
focus_neighbor_bottom = NodePath("../onScreenControls")
focus_previous = NodePath("../MusicSlider")
theme_override_constants/grabber_offset = 0
theme_override_styles/slider = SubResource("StyleBoxFlat_3jhi3")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_xwqeg")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_5e3kt")
max_value = 10.0
value = 5.0
tick_count = 10
ticks_on_borders = true

[node name="hideControlsLabel" type="Label" parent="ReferenceRect"]
layout_mode = 0
offset_left = 134.0
offset_top = 632.0
offset_right = 1159.0
offset_bottom = 685.0
theme = ExtResource("1_f7cvh")
theme_override_colors/font_color = Color(0, 0.396078, 0, 1)
theme_override_colors/font_shadow_color = Color(0.392157, 0.407843, 0.415686, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "HIDE ON-SCREEN CONTROLS"

[node name="Label7" type="Label" parent="ReferenceRect"]
layout_mode = 0
offset_left = 134.0
offset_top = 770.0
offset_right = 720.0
offset_bottom = 823.0
theme = ExtResource("1_f7cvh")
theme_override_colors/font_color = Color(0, 0.396078, 0, 1)
theme_override_colors/font_shadow_color = Color(0.392157, 0.407843, 0.415686, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "SKIP TRAINING"

[node name="Label8" type="Label" parent="ReferenceRect"]
layout_mode = 0
offset_left = 952.0
offset_top = 770.0
offset_right = 1538.0
offset_bottom = 823.0
theme = ExtResource("1_f7cvh")
theme_override_colors/font_color = Color(0, 0.396078, 0, 1)
theme_override_colors/font_shadow_color = Color(0.392157, 0.407843, 0.415686, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "SPEEDRUN MODE"

[node name="onScreenControls" parent="ReferenceRect" instance=ExtResource("3_jed3m")]
offset_left = 1208.0
offset_top = 608.0
offset_right = 1308.0
offset_bottom = 708.0
focus_neighbor_top = NodePath("../FXSlider")
focus_neighbor_bottom = NodePath("../CheckButton")
focus_mode = 2
InnerRectanglePadding = 8

[node name="CheckButton" parent="ReferenceRect" instance=ExtResource("3_jed3m")]
offset_left = 776.0
offset_top = 744.0
offset_right = 876.0
offset_bottom = 844.0
focus_neighbor_top = NodePath("../onScreenControls")
focus_neighbor_right = NodePath("../speedRunMode")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_mode = 2
InnerRectanglePadding = 8

[node name="speedRunMode" parent="ReferenceRect" instance=ExtResource("3_jed3m")]
offset_left = 1592.0
offset_top = 744.0
offset_right = 1692.0
offset_bottom = 844.0
focus_neighbor_left = NodePath("../CheckButton")
focus_neighbor_top = NodePath("../onScreenControls")
focus_neighbor_bottom = NodePath("../OKButton")
focus_mode = 2
InnerRectanglePadding = 8

[connection signal="pressed" from="ReferenceRect/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="ReferenceRect/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="_on_toggled" from="ReferenceRect/onScreenControls" to="." method="_on_on_screen_controls__on_toggled"]
[connection signal="_on_toggled" from="ReferenceRect/CheckButton" to="." method="_on_check_button__on_toggled"]
[connection signal="_on_toggled" from="ReferenceRect/speedRunMode" to="." method="_on_speed_run_mode__on_toggled"]
